--- a/index.html
+++ b/index.html
@@ -25,61 +25,25 @@
 							<div class="notification home" ng-show="myInput == 'home'">
 								<p>home</p>
 							</div>
-							<div class="notification work">
+							<div class="notification work" ng-show="myInput == 'work'">
 								<p>work</p>
 							</div>
-							<div class="notification street">
+							<div class="notification street" ng-show="myInput == 'street'">
 								<p>street</p>
 							</div>
-							<div class="notification street busy">
+							<div class="notification busy" ng-show="myInput == 'busy'">
 								<p>busy</p>
 							</div>
-							<div class="notification home">
+							<div class="notification home" ng-show="myInput == 'home'">
 								<p>home</p>
 							</div>
-							<div class="notification work">
+							<div class="notification work" ng-show="myInput == 'work'">
 								<p>work</p>
 							</div>
-							<div class="notification street">
+							<div class="notification street" ng-show="myInput == 'street'">
 								<p>street</p>
 							</div>
-							<div class="notification busy">
-								<p>busy</p>
-							</div>
-							<div class="notification home">
-								<p>home</p>
-							</div>
-							<div class="notification work">
-								<p>work</p>
-							</div>
-							<div class="notification street">
-								<p>street</p>
-							</div>
-							<div class="notification busy">
-								<p>busy</p>
-							</div>
-							<div class="notification home">
-								<p>home</p>
-							</div>
-							<div class="notification work">
-								<p>work</p>
-							</div>
-							<div class="notification street">
-								<p>street</p>
-							</div>
-							<div class="notification busy">
-								<p>busy</p>
-							</div>
-							<div class="notification home">
-								<p>home</p>
-							</div>
-							<div class="notification work">
-								<p>work</p>
-							</div>
-							<div class="notification street">
-								<p>street</p>
-							</div>
-							<div class="notification busy">
+							<div class="notification busy" ng-show="myInput == 'busy'">
 								<p>busy</p>
 							</div>
 						</div>
@@ -124,3 +88,4 @@
 			</div>
 		</div>
 	</body>
+</html>
