Changed a bit layout to have proper dimensions

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body ng-controller="form-controller">
 <div class="container">
     <div class="row">
-        <div class="col-md-6" id="phone">
+        <div class="col-md-3 col-md-offset-1" id="phone">
             <div id="outerPhone">
                 <div id="content">
                     <div class="notification home" ng-show="myInput == 'home'">
@@ -85,7 +85,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-6" id="menu">
+        <div class="col-md-6 col-md-offset-2" id="menu">
             <form>
                 <div class="form-group">
                     <div class="radio">
