Possibility to DL json file

--- a/learning.html
+++ b/learning.html
@@ -33,6 +33,17 @@
 
             </select>
         </div>
+
+        <div class="col-md-6">
+            <button type="button" class="btn btn-default btn-md" onclick="saveToDisk()">
+                <span class="glyphicon glyphicon-floppy-save"></span>
+            </button>
+            <button type="button" class="btn btn-default btn-md" onclick="openFile()">
+                <span class="glyphicon glyphicon-folder-open"></span>
+            </button>
+
+        </div>
+
     </div>
 
     <div id="notificationViewer">
