--- a/learning.html
+++ b/learning.html
@@ -15,6 +15,8 @@
 
     <script src="lib/angular.min.js"></script>
     <script src="lib/jquery-2.1.1.min.js"></script>
+    <script src="lib/blob/blob.js"></script>
+    <script src="lib/FileSaver/FileSaver.js"></script>
     <script src="app.js"></script>
     <script src="notification.js"></script>
     <script src="userInput.js"></script>
@@ -38,6 +40,9 @@
             <button type="button" class="btn btn-default btn-md" onclick="saveToDisk()">
                 <span class="glyphicon glyphicon-floppy-save"></span>
             </button>
+
+            <input type="file" id='fileInput' name="files" accept=".json"/>
+
             <button type="button" class="btn btn-default btn-md" onclick="openFile()">
                 <span class="glyphicon glyphicon-folder-open"></span>
             </button>
