--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <div class="container">
     <div class="row">
         <div class="col-md-3 col-md-offset-1" id="phone">
-            <div id="outerPhone">
-                <div id="content">
+            <div class="outerPhone">
+                <div class="content">
                     <div ng-repeat="not in notifications | filter: { context: search } track by $index">
                         <div class="notification {{not.sender}}">
                             <p>{{not.sender}}: {{not.text}}</p>
