--- a/filter.html
+++ b/filter.html
@@ -9,7 +9,7 @@
     <meta name="description" content="SoulShepherd Prototype">
     <meta name="author" content="">
 
-    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css" />
+    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css"/>
 
     <link rel="stylesheet" href="main.css">
 
@@ -44,7 +44,7 @@
 
     </div>
 
-    <div class = "row">
+    <div class="row">
         <div class="col-lg-5">
 
             <div class="phone">
@@ -59,13 +59,27 @@
         </div>
 
         <div class="col-lg-2">
-            <div id="menu" class="outside-phone">
-                <select id="contextSelection">
-                    <option>Home</option>
-                    <option>Work</option>
-                    <option>Transport</option>
-                </select>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div id="menu" class="outside-phone">
+                        <select id="contextSelection">
+                            <option>Home</option>
+                            <option>Work</option>
+                            <option>Transport</option>
+                        </select>
+                    </div>
+                </div>
             </div>
+            <div class="row">
+                <div class="col-lg-12" style="text-align: center;">
+                        <button type="button" class="btn btn-success button-outside-phone" onclick="refreshFilter">
+                            <span class="glyphicon glyphicon-refresh"></span> Apply filter
+                        </button>
+
+                </div>
+
+            </div>
+
         </div>
 
         <div class="col-lg-5">
@@ -94,8 +108,7 @@
 </body>
 
 <script>
-    $(document).ready( function()
-    {
+    $(document).ready(function () {
         loadDB();
         fillAllNotif();
     });
