skeleton for notification filter. May need a sober check.

--- a/filter.html
+++ b/filter.html
@@ -20,6 +20,7 @@
     <script src="app.js"></script>
     <script src="notification.js"></script>
     <script src="userInput.js"></script>
+    <script src="filter.js"></script>
 </head>
 <body>
 <div class="container">
@@ -72,7 +73,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12" style="text-align: center;">
-                        <button type="button" class="btn btn-success button-outside-phone" onclick="refreshFilter">
+                        <button type="button" class="btn btn-success button-outside-phone" onclick="refreshFilter()">
                             <span class="glyphicon glyphicon-refresh"></span> Apply filter
                         </button>
 
