added new notification. Total from 4 to 30. Auto-display the notification amount in filter page loading.

--- a/filter.html
+++ b/filter.html
@@ -120,6 +120,7 @@
     $(document).ready(function () {
         loadDB();
         fillAllNotif();
+        refreshNotifAmount();
     });
 
 </script>
