it doesn't work any better, but at least not worst either. Started merge with JC filter function

--- a/filter.html
+++ b/filter.html
@@ -118,6 +118,7 @@
 
 <script>
     $(document).ready(function () {
+        loadContextList();
         loadDB();
         fillAllNotif();
         refreshNotifAmount();
