--- a/filter.html
+++ b/filter.html
@@ -28,6 +28,13 @@
     <div class="row">
 
         <div class="col-md-12 inline">
+
+            <a href="learning.html">
+                <button type="button" class="btn btn-default btn-md" onclick="">
+                    <span class="glyphicon glyphicon-transfer"></span>
+                </button>
+            </a>
+
             <button type="button" class="btn btn-default btn-md" onclick="saveToDisk()">
                 <span class="glyphicon glyphicon-floppy-save"></span>
             </button>
