--- a/learning.html
+++ b/learning.html
@@ -29,6 +29,14 @@
     <div class="row">
 
         <div class="col-md-12 inline">
+
+            <a href="filter.html">
+                <button type="button" class="btn btn-default btn-md" onclick="">
+                    <span class="glyphicon glyphicon-transfer"></span>
+                </button>
+            </a>
+
+
             <button type="button" class="btn btn-default btn-md" onclick="saveToDisk()">
                 <span class="glyphicon glyphicon-floppy-save"></span>
             </button>
